@@ -27,6 +27,8 @@ namespace Pds {
     Datagram& datagram();
     Datagram& dg();
 
+    bool insert(const Xtc& tc, const void* payload);
+
     InDatagramIterator* iterator(Pool*) const;
 
     int  send(ToEb&);
